crates/stems-cli/tests/snapshots/help__stems_daemon_status.snap
---
source: crates/stems-cli/tests/help.rs
expression: help
---
Show the daemon's pid, version, socket and uptime.

`data`: `{ running, pid, version, api_version, workspace, uptime_s, socket, lock, log, ... }`. Exits
4 (DAEMON_NOT_RUNNING, `running: false`) when no daemon answers; the hint says `stale lock` when a
crashed daemon left its lock behind.

Usage: stems daemon status [OPTIONS]

Options:
  -h, --help
          Print help (see a summary with '-h')

Global options:
      --workspace <PATH>
          Workspace directory or stems.yaml path (default: $STEMS_WORKSPACE, else walk up from the
          current directory)

      --json
          Emit the JSON envelope (the default when stdout is not a terminal)

      --human
          Emit human text even when stdout is not a terminal

      --no-color
          Disable colours in human output
          
          [env: STEMS_NO_COLOR]

  -q, --quiet
          Print only errors in human mode

  -v, --verbose...
          More detail (repeat for more: -vv)

      --home <PATH>
          Root for daemon state, sockets, locks and logs (default: ~/Library/Application
          Support/stems on macOS, $XDG_STATE_HOME/stems or ~/.local/state/stems on Linux)
          
          [env: STEMS_HOME]
