crates/stems-cli/tests/snapshots/help__stems_graph.snap
---
source: crates/stems-cli/tests/help.rs
expression: help
---
Draw the dependency graph.

Boxes per stem with its status glyph, dependants on the left, arrows to their dependencies; soft
edges dashed; a legend line below. Live glyphs come from the daemon when it runs (`--no-status` for
config only, `·` everywhere). `--format mermaid|dot|json` exports; --json gives `{nodes: [{name,
type, status, glyph, reason}], edges: [{from, to, condition, soft, protocol, via}]}`.

Usage: stems graph [OPTIONS]

Options:
      --format <FORMAT>
          Output format

          Possible values:
          - text:    Layered box drawing
          - mermaid: Mermaid flowchart
          - dot:     Graphviz dot
          - json:    JSON nodes and edges
          
          [default: text]

      --status
          Live status glyphs from the daemon (the default when it runs; an error when it does not)

      --no-status
          Config only: every stem `·`, even when the daemon runs

      --watch [<INTERVAL>]
          Redraw until Ctrl-C, every INTERVAL (seconds or a duration such as `500ms`; default 1s)

      --focus <STEM>
          Only this stem and its neighbours

      --profile <PROFILE>
          Only the stems of this profile (plus their hard dependencies)

      --edges
          Label edges with their protocol/via metadata

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --workspace <PATH>
          Workspace directory or stems.yaml path (default: $STEMS_WORKSPACE, else walk up from the
          current directory)

      --json
          Emit the JSON envelope (the default when stdout is not a terminal)

      --human
          Emit human text even when stdout is not a terminal

      --no-color
          Disable colours in human output
          
          [env: STEMS_NO_COLOR]

  -q, --quiet
          Print only errors in human mode

  -v, --verbose...
          More detail (repeat for more: -vv)

      --home <PATH>
          Root for daemon state, sockets, locks and logs (default: ~/Library/Application
          Support/stems on macOS, $XDG_STATE_HOME/stems or ~/.local/state/stems on Linux)
          
          [env: STEMS_HOME]
