crates/stems-cli/tests/snapshots/help__stems_health.snap
---
source: crates/stems-cli/tests/help.rs
expression: help
---
Show the last health probe results per stem, with latency.

The table has one row per probe: STEM TYPE OK LATENCY DETAIL TS. Without a stem it shows each stem's
latest probe; with one, its last 10 (`--last` changes both; the daemon keeps 50 per stem). --json
gives `{stems: [{name, type, state, consecutive_failures, transitions_60s, results: [{ts, ok,
outcome, latency_ms, detail}]}]}`.

Usage: stems health [OPTIONS] [STEM]

Arguments:
  [STEM]
          Only this stem

Options:
      --last <N>
          Probe results per stem (default 1 without a stem, 10 with one; max 50)

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --workspace <PATH>
          Workspace directory or stems.yaml path (default: $STEMS_WORKSPACE, else walk up from the
          current directory)

      --json
          Emit the JSON envelope (the default when stdout is not a terminal)

      --human
          Emit human text even when stdout is not a terminal

      --no-color
          Disable colours in human output
          
          [env: STEMS_NO_COLOR]

  -q, --quiet
          Print only errors in human mode

  -v, --verbose...
          More detail (repeat for more: -vv)

      --home <PATH>
          Root for daemon state, sockets, locks and logs (default: ~/Library/Application
          Support/stems on macOS, $XDG_STATE_HOME/stems or ~/.local/state/stems on Linux)
          
          [env: STEMS_HOME]
