crates/stems-cli/tests/snapshots/help__stems_logs.snap
---
source: crates/stems-cli/tests/help.rs
expression: help
---
Show or follow stem and script logs.

Prints captured lines (at most 10 000, the newest), several stems interleaved by time; with -f
replays the last 10 lines (or --since / --tail) and keeps streaming until Ctrl-C or the daemon
stops. With --json the output is NDJSON, one record per line (`{ts, stem, stream, tag, level, text,
fields}`) and no envelope. --export writes a .tar.gz bundle (status, events, redacted config, log
files) instead.

Usage: stems logs [OPTIONS] [STEMS]...

Arguments:
  [STEMS]...
          Only these stems

Options:
  -f, --follow
          Keep streaming new lines

      --since <SINCE>
          Start at this age or timestamp (e.g. 10m)

      --until <UNTIL>
          Stop at this age or timestamp

      --grep <REGEX>
          Only lines matching this regex

      --level <LEVEL>
          Level filter: `error` (exactly that level) or `warn+` (warn and above)

      --script <NAME>
          Only output of this script (lines tagged with its name)

      --tail <N>
          Last N lines

      --export
          Write a log bundle (.tar.gz) instead of printing

  -o, --output <FILE>
          Output file for --export

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --workspace <PATH>
          Workspace directory or stems.yaml path (default: $STEMS_WORKSPACE, else walk up from the
          current directory)

      --json
          Emit the JSON envelope (the default when stdout is not a terminal)

      --human
          Emit human text even when stdout is not a terminal

      --no-color
          Disable colours in human output
          
          [env: STEMS_NO_COLOR]

  -q, --quiet
          Print only errors in human mode

  -v, --verbose...
          More detail (repeat for more: -vv)

      --home <PATH>
          Root for daemon state, sockets, locks and logs (default: ~/Library/Application
          Support/stems on macOS, $XDG_STATE_HOME/stems or ~/.local/state/stems on Linux)
          
          [env: STEMS_HOME]
